more refactoring, all compiles